[package]
authors = ["jojo-f <jojo@dcpt.online>"]
edition = "2018"
name = "wasm-learn"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.70"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# 将死机消息记录到开发人员控制台
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
# 使用js系统函数
js-sys = "0.3.47"

# trace!()	console.debug()
# debug!()	console.log()
# info!()	console.info()
# warn!()	console.warn()
# error!()	console.error()
cfg-if = "1.0.0"
log = "0.4"
console_log = { version = "0.2", optional = true }
# 使用小的贮存单位
fixedbitset = "0.3.2"
wasm-bindgen-test = "0.3.20"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]

[profile.release]
lto = true
opt-level = "z"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "wee_alloc", "console_log"]
